bin/debug/log.txt
In file included from main.cpp:2:
In file included from ./generic/container/interface.hpp:227:
In file included from ./generic/container/discrete/discrete.hpp:3:
In file included from ./generic/container/discrete/discrete_global.hpp:12:
[1m./generic/container/discrete/discrete_global.ipp:366:12: [0m[0;1;31merror: [0m[1malias template 'pair' requires template arguments; argument deduction only allowed for class templates or alias templates[0m
  366 |     [0;34mreturn[0m pair ( left.key() - right.key(), left.value() - right.value() );[0m
      | [0;1;32m           ^
[0m[1m./generic/container/interface.hpp:26:97: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   26 |     [0;34mtemplate[0m < [0;34mclass[0m type1, [0;34mclass[0m type2 = type1,                           [0;34mclass[0m device = cpu > [0;34musing[0m pair    = device::[0;34mtemplate[0m pair<type1,type2>;[0m
      | [0;1;32m                                                                                                ^
[0mIn file included from main.cpp:2:
In file included from ./generic/container/interface.hpp:227:
In file included from ./generic/container/discrete/discrete.hpp:3:
In file included from ./generic/container/discrete/discrete_global.hpp:12:
[1m./generic/container/discrete/discrete_global.ipp:372:12: [0m[0;1;31merror: [0m[1malias template 'pair' requires template arguments; argument deduction only allowed for class templates or alias templates[0m
  372 |     [0;34mreturn[0m pair ( left.key() * right, left.value() * right );[0m
      | [0;1;32m           ^
[0m[1m./generic/container/interface.hpp:26:97: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   26 |     [0;34mtemplate[0m < [0;34mclass[0m type1, [0;34mclass[0m type2 = type1,                           [0;34mclass[0m device = cpu > [0;34musing[0m pair    = device::[0;34mtemplate[0m pair<type1,type2>;[0m
      | [0;1;32m                                                                                                ^
[0mIn file included from main.cpp:2:
In file included from ./generic/container/interface.hpp:227:
In file included from ./generic/container/discrete/discrete.hpp:3:
In file included from ./generic/container/discrete/discrete_global.hpp:12:
[1m./generic/container/discrete/discrete_global.ipp:378:12: [0m[0;1;31merror: [0m[1malias template 'pair' requires template arguments; argument deduction only allowed for class templates or alias templates[0m
  378 |     [0;34mreturn[0m pair ( left * right.value(), left * right.value() );[0m
      | [0;1;32m           ^
[0m[1m./generic/container/interface.hpp:26:97: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   26 |     [0;34mtemplate[0m < [0;34mclass[0m type1, [0;34mclass[0m type2 = type1,                           [0;34mclass[0m device = cpu > [0;34musing[0m pair    = device::[0;34mtemplate[0m pair<type1,type2>;[0m
      | [0;1;32m                                                                                                ^
[0mIn file included from main.cpp:2:
In file included from ./generic/container/interface.hpp:227:
In file included from ./generic/container/discrete/discrete.hpp:3:
In file included from ./generic/container/discrete/discrete_global.hpp:12:
[1m./generic/container/discrete/discrete_global.ipp:384:12: [0m[0;1;31merror: [0m[1malias template 'pair' requires template arguments; argument deduction only allowed for class templates or alias templates[0m
  384 |     [0;34mreturn[0m pair ( left.key() / right, left.value() / right );[0m
      | [0;1;32m           ^
[0m[1m./generic/container/interface.hpp:26:97: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   26 |     [0;34mtemplate[0m < [0;34mclass[0m type1, [0;34mclass[0m type2 = type1,                           [0;34mclass[0m device = cpu > [0;34musing[0m pair    = device::[0;34mtemplate[0m pair<type1,type2>;[0m
      | [0;1;32m                                                                                                ^
[0mIn file included from main.cpp:2:
In file included from ./generic/container/interface.hpp:228:
In file included from ./generic/container/array/array.hpp:16:
[1m./generic/container/array/array_base/array_detail.hpp:399:31: [0m[0;1;31merror: [0m[1mimplicit instantiation of undefined template 'ap::basic_string<char>'[0m
  399 |                        [0;34mreturn[0m string(buff.str()); [0m
      | [0;1;32m                              ^
[0m[1m./generic/container/interface.hpp:34:103: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   34 |     [0;34mtemplate[0m < [0;34mclass[0m type,                                                 [0;34mclass[0m device = cpu > [0;34mclass[0m basic_string;[0m
      | [0;1;32m                                                                                                      ^
[0m[1mmain.cpp:15:11: [0m[0;1;31merror: [0m[1malias template 'pair' requires template arguments; argument deduction only allowed for class templates or alias templates[0m
   15 |     print(pair([0;32m1[0m, [0;32m3[0m));[0m
      | [0;1;32m          ^
[0m[1m./generic/container/interface.hpp:26:97: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   26 |     [0;34mtemplate[0m < [0;34mclass[0m type1, [0;34mclass[0m type2 = type1,                           [0;34mclass[0m device = cpu > [0;34musing[0m pair    = device::[0;34mtemplate[0m pair<type1,type2>;[0m
      | [0;1;32m                                                                                                ^
[0m6 errors generated.
